tdf#148631: fix shading in some ribbon shapes

This fixes the shading of some custom shapes:
  - mso_sptRibbon
  - mso_sptEllipseRibbon
  - mso_sptEllipseRibbon2

Content in this patch:
  - Remove nofill command for shading sub-shape
  - Beautify the comment by the way. No vertex is changed.

Change-Id: Ia26fcf6d3aad8b2286e9499a35efed72eb8cc795
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178630
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>